fixed spacing again

--- a/style.css
+++ b/style.css
@@ -109,7 +109,7 @@ header video {
     padding-right: 9em;
     padding-left: 9em;
     padding-top: 5em;
-    padding-bottom: 12em;
+    padding-bottom: 5em;
 }
 
 .aboutme h1 {
@@ -365,7 +365,7 @@ header video {
     background-color: #3d3d3d;
     padding-right: 8em;
     padding-left: 8em;
-    padding-top: 14em;
+    padding-top: 15em;
     padding-bottom: 12em;
 }
 
